--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
     <section class="section features">
       <h2 class="section-title">Vì sao chọn chúng tôi?</h2>
       <ul class="feature-list">
-        <li>Giỏ hàng lưu bằng <code>localStorage</code> — chạy tĩnh 100%.</li>
-        <li>Responsive: đẹp trên điện thoại và máy tính.</li>
-        <li>Dễ triển khai với GitHub Pages.</li>
-      </ul>
+        <ul class="feature-list">
+  <li>Sản phẩm chính hãng, bảo hành rõ ràng.</li>
+  <li>Giá cả cạnh tranh, nhiều khuyến mãi hấp dẫn.</li>
+  <li>Giao hàng nhanh chóng toàn quốc.</li>
+  <li>Hỗ trợ khách hàng 24/7.</li>
+</ul>
     </section>
   </main>
 
