--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<<!doctype html>
 <html lang="vi">
 <head>
   <meta charset="utf-8">
@@ -35,12 +35,10 @@
     <section class="section features">
       <h2 class="section-title">Vì sao chọn chúng tôi?</h2>
       <ul class="feature-list">
-        <ul class="feature-list">
-  <li>Sản phẩm chính hãng, bảo hành rõ ràng.</li>
-  <li>Giá cả cạnh tranh, nhiều khuyến mãi hấp dẫn.</li>
-  <li>Giao hàng nhanh chóng toàn quốc.</li>
-  <li>Hỗ trợ khách hàng 24/7.</li>
-</ul>
+        <li>Sản phẩm chính hãng, bảo hành rõ ràng.</li>
+        <li>Giao hàng nhanh chóng toàn quốc.</li>
+        <li>Hỗ trợ khách hàng 24/7</li>
+      </ul>
     </section>
   </main>
 
