--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     <section class="section">
       <h2 class="section-title">Vì sao chọn chúng tôi?</h2>
       <ul class="feature-list">
-        <li>Hệ thống giỏ hàng lưu bằng <code>localStorage</code> — chạy tĩnh 100%.</li>
-        <li>Bố cục gọn đẹp, dùng được trên điện thoại.</li>
-        <li>Dễ triển khai với GitHub Pages.</li>
+          <li>Sản phẩm chính hãng, bảo hành rõ ràng.</li>
+          <li>Giá cả cạnh tranh, nhiều khuyến mãi hấp dẫn.</li>
+          <li>Giao hàng nhanh chóng toàn quốc.</li>
+          <li>Hỗ trợ khách hàng 24/7.</li>
       </ul>
     </section>
   </main>
